[package]
name = "rgb-core"
version = "0.11.1-alpha.1"
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "RGB Core Library: confidential & scalable smart contracts on Bitcoin & Lightning (consensus layer)"
repository = "https://github.com/RGB-WG/rgb-core"
homepage = "https://rgb.tech"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.81.0"
exclude = [".github"]

[lib]
name = "rgbcore"
crate-type = ["cdylib", "rlib"] # We need this for WASM

[[bin]]
name = "rgbcore-stl"
required-features = ["stl"]

[dependencies]
amplify = { version = "~4.8.0", features = ["rand"] }
baid64 = "~0.4.1"
strict_encoding = "~2.8.2"
strict_types = { version = "~2.8.3", features = ["armor"] }
aluvm = { version = "~0.11.0", features = ["std", "ascii-armor"] }
commit_verify = { version = "0.11.0", features = ["rand", "derive"] }
single_use_seals = "~0.11.0-beta.9"
bp-core = { version = "~0.11.1-alpha.1" }
secp256k1 = { version = "0.30.0", features = ["global-context"] }
mime = "~0.3.17"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
chrono = "0.4.38"

[features]
default = []
all = ["stl", "serde"]
stl = ["commit_verify/stl", "bp-core/stl", "aluvm/stl"]
serde = [
    "serde_crate",
    "amplify/serde",
    "strict_encoding/serde",
    "strict_types/serde",
    "commit_verify/serde",
    "bp-core/serde",
    "aluvm/serde",
    "secp256k1/serde"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]

[patch.crates-io]
aluvm = { git = "https://github.com/zoedberg/rust-aluvm", branch = "0.11.1-2" }
commit_verify = { git = "https://github.com/zoedberg/client_side_validation", branch = "0.11.1-2" }
bp-consensus = { git = "https://github.com/zoedberg/bp-core", branch = "0.11.1-2" }
bp-core = { git = "https://github.com/zoedberg/bp-core", branch = "0.11.1-2" }
