[package]
name = "rgb-core"
version = "0.12.0-rc.2"
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "RGB Core Library: confidential & scalable smart contracts on Bitcoin & Lightning (consensus layer)"
repository = "https://github.com/RGB-WG/rgb-core"
homepage = "https://rgb.tech"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.81.0" # Due to need for `Error` trait in `core`
exclude = [".github"]

[lib]
name = "rgbcore"
crate-type = ["cdylib", "rlib", "staticlib"] # We need this for WASM

[dependencies]
amplify = { version = "~4.9.0", default-features = false, features = ["alloc"] }
strict_encoding = "2.9.1"
commit_verify = "~0.12.0-rc.1"
single_use_seals = { version = "~0.12.0-rc.1", features = ["strict_encoding"] }
ultrasonic = "0.12.0-rc.2"
bp-core = { version = "0.12.0-rc.2", optional = true }
serde = { version = "1", optional = true }

[features]
default = ["std", "bitcoin"]
all = ["std", "bitcoin", "liquid", "prime", "serde"]

std = []

bitcoin = ["bp-core"]
liquid = ["bp-core"]
prime = []

serde = [
    "dep:serde",
    "amplify/serde",
    "ultrasonic/serde",
    "commit_verify/serde",
    "single_use_seals/serde"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom2 = { package = "getrandom", version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage_nightly)'] }
