[package]
name = "rgb-core"
version = "0.11.1-beta.1"
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "RGB Core Library: confidential & scalable smart contracts on Bitcoin & Lightning (consensus layer)"
repository = "https://github.com/RGB-WG/rgb-core"
homepage = "https://rgb.tech"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.81.0"
exclude = [".github"]

[lib]
name = "rgbcore"
crate-type = ["cdylib", "rlib"] # We need this for WASM

[[bin]]
name = "rgbcore-stl"
required-features = ["stl", "vesper"]

[dependencies]
amplify = { version = "~4.9.0", features = ["rand"] }
baid64 = "~0.4.2"
strict_encoding = "~2.9.1"
strict_types = { version = "~2.9.0", features = ["armor"] }
commit_verify = { version = "0.12.0-rc.1", features = ["rand", "derive"] }
bp-consensus = { version = "~0.12.0-rc.2" }
bp-seals = { version = "~0.11.1-beta.1" }
secp256k1 = { version = "0.30.0", features = ["global-context"] }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }

[features]
default = []
all = ["stl", "vesper", "serde"]
stl = ["commit_verify/stl", "bp-consensus/stl", "bp-seals/stl"]
vesper = ["bp-seals/vesper"]
serde = [
    "serde_crate",
    "amplify/serde",
    "strict_encoding/serde",
    "strict_types/serde",
    "commit_verify/serde",
    "bp-consensus/serde",
    "bp-seals/serde",
    "secp256k1/serde"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]

[patch.crates-io]
bp-seals = { path = "../bp-core" }
