[package]
name = "lnpbp_derive"
version = "0.1.0"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNP/BP Core Library derive macros"
repository = "https://github.com/LNP-BP/rust-lnpbp"
homepage = "https://github.com/LNP-BP"
keywords = ["bitcoin", "lightning", "lnp-bp", "layer-3", "cryptography"]
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "~1.0.7"
syn = "~1.0.31"
amplify = "=1.0.0-beta.1"

[dev-dependencies]
lnpbp = { path = ".." }
