[package]
name = "rgb22"
version = "0.4.0-beta"
license = "MIT"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "RGB-22 Library: digital identity for bitcoin & lightning"
repository = "https://github.com/rgb-org/rgb-core"
homepage = "https://rgb.network"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "identity"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
edition = "2018"
exclude = [".github", "contrib"]

[lib]
name = "rgb22"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = "3"
amplify_derive = "2"
lnpbp = "0.4"
rgb-core = "0.4"
bitcoin = "0.26"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.5", features = ["hex"], optional = true }
chrono = "0.4"

[features]
default = []
all = ["serde"]
serde = ["serde_crate", "serde_with", "lnpbp/serde", "bitcoin/use-serde", "rgb-core/serde", "amplify/serde"]
