[package]
name = "rgb23"
version = "0.4.0-alpha.1+1"
license = "MIT"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "RGB-23 Library: verifiable audit logs for bitcoin & lightning"
repository = "https://github.com/rgb-org/rgb-core"
homepage = "https://rgb.network"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "audit-log"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
edition = "2018"
exclude = [".github", "contrib"]

[lib]
name = "rgb23"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = "3"
amplify_derive = "2.4.3"
lnpbp = { git = "https://github.com/LNP-BP/rust-lnpbp" }
rgb-core = { git = "https://github.com/rgb-org/rgb-core" }
bitcoin = "0.26"
serde_crate = { package = "serde", version = "~1.0.106", features = ["derive"], optional = true }
serde_with = { version = "~1.5.1", features = ["hex"], optional = true }
chrono = "0.4"

[features]
default = []
all = ["serde"]
serde = ["serde_crate", "serde_with", "lnpbp/serde", "bitcoin/use-serde", "rgb-core/serde", "amplify/serde"]
